--- a/main.html
+++ b/main.html
@@ -7,8 +7,30 @@
 </head>
 
 <body>
+	<header>
+		<h1>Movie Name</h1>
+	</header>
+	<nav>
+		<a id="nav-actor" href="#actor">Actors</a>
+		<a id="nav-quote" href="#quote">Quote</a>
+	</nav>
+	<summary>
+		Summary of this movie
+	</summary>
+	<section id="actor">Details about the actors of this movie</section>
+	<section id="quote"> Favorite quote of the movie</section>
+	<aside>
+		<p>Imdb Rating <br> Release date</p>
+	</aside>
+	<footer id="footer">
+		<p>Produced by : </p>
+		<li>person 1</li>
+		<li>person 2</li>
+	</footer>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+	
+	
+	<script type="text/javascript" src="./script.js">
 </script>
 
 </body>
