--- a/main.html
+++ b/main.html
@@ -24,8 +24,10 @@
 	</aside>
 	<footer id="footer">
 		<p>Produced by :</p>
-		<li>person 1</li>
-		<li>person 2</li>
+		<li>&lt;Name&gt;</li>
+		<li>&lt;Name&gt;</li>
+
+
 	</footer>
 	<!-- the entire body must be written by student -->
 	
