--- a/main.html
+++ b/main.html
@@ -23,9 +23,9 @@
 		<p>Imdb Rating <br> Release date</p>
 	</aside>
 	<footer id="footer">
-		<p>Produced by :</p>
-		<li>&lt;Name&gt;</li>
-		<li>&lt;Name&gt;</li>
+		<p>Produced by: &lt;Name&gt;</p>
+	
+
 
 
 	</footer>
